--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@ import { SITE_TITLE } from '../consts';
   <nav>
     <div class="brand">
          <a href="/" class="logo-area">
-      <img src="../public/logo.png" alt="Milton Pereira Logo" class="logo-img" />
+      <img src="/logo.png" alt="Milton Pereira Logo" class="logo-img" />
     </a>
     </div>
 
